fixing text wrap with padding

--- a/assets/styles/component/accordion.scss
+++ b/assets/styles/component/accordion.scss
@@ -14,7 +14,7 @@
     font-size: 24px;
     font-weight: 500;
     background-color: $light-gray;
-    padding: 1.8rem 0 1.8rem 1.3rem;
+    padding: 1.8rem 3.5rem 1.8rem 1.3rem;
     border-radius: 0.25rem;
 
     @include hover {
